assets/styles/login.css
#FormLogin div.checkbox {
	float: left;
	padding: 8px 0;
	width: 22px;
}

#FormLogin label.checkbox {
	line-height: 30px;
	float: left;
}

#FormLogin .forgot-password, #FormLogin .no-account {
	color: #2F3E6E;
	float: right;
	margin-top: 10px;
	text-decoration: none;
}

#FormLogin .no-account {
	display: block;
    margin-bottom: 10px;
}

#FormLogin .forgot-password:hover , #FormLogin .no-account:hover{
	text-decoration: underline;
}

